29_NetworkPolicies/02_Egress_Sample.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egresssamplepolicy
  namespace: default
spec:
  podSelector: 
    matchLabels:
      app: thinknyxone
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: thinknyxtwo
