29_NetworkPolicies/03_Ingress_Sample.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingresssamplepolicy
  namespace: default
spec:
  podSelector: 
    matchLabels:
      app: thinknyxtwo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: thinknyxone
