29_NetworkPolicies/04_deny_all_withDNSallow.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - 
    ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
